# blender-temp

./: .gitignore  0001-Fix-None-indexing-to-append-implicit-trailing-slices.patch  0001-oidn-cuda-fix.patch  0002-Fix-unsqueeze-codegen-to-resolve-negative-dims-corre.patch  0003-Deduplicate-tensor-indexer-dims-across-type-propagat.patch  README.md  deep-research-report-01.md  deep-research-report-02.md  deep-research-report-03.md  default.nix  flake.nix  overlay.nix  pyproject.toml  sr_warp_research_notes.md
blender-render/: default.nix  render.py
blender_temp/: __main__.py
blender_temp/cmd/: main.py
blender_temp/gaussian_sr/: __init__.py  appearance.py  benchmarking.py  camera.py  debug_checkpoint.py  density_control.py  density_logging.py  field.py  fixed_capacity.py  gsplat_renderer.py  helion_gsplat_renderer.py  image_utils.py  math_utils.py  observation_model.py  pipeline.py  posefree_config.py  progress_logging.py  reference_renderer.py  renderer_host_prep.py  residual_head.py  warp_gsplat_autograd.py  warp_gsplat_contracts.py  warp_gsplat_kernels.py  warp_gsplat_renderer.py  warp_runtime.py
configs/helion/: raster_forward_h1080_w1920_c12.json  raster_forward_h1080_w1920_c12_fp32.json  raster_forward_h64_w64_c12_fp32.json  visibility_stats_h1080_w1920_bins4_fp32.json
scripts/: autotune_helion_kernels.py  benchmark_helion_vs_warp.py  continue_training_from_debug_checkpoint.py  replay_debug_checkpoint.py  run_quick_benchmark.py  tune_helion_renderer.py  warp_renderer_gradcheck.py
tests/: test_cmd_main.py
tests/gaussian_sr/: scene_utils.py  strategies.py  (+19 more)
(+8 files in other folders)
