[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blender_temp"
version = "0.1.0"
authors = [{ name = "Connor Baker", email = "ConnorBaker01@gmail.com" }]
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
description = "who knows"
dependencies = ["warp-lang", "torch", "torchvision", "helion"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "hypothesis"]

[project.scripts]
blender-temp = "blender_temp.cmd:main.main"

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "I", "PL", "FURB", "LOG", "RUF", "G", "TID"]
ignore = [
  # Ignore functions with many arguments (I like currying)
  "PLR0913",
]

[tool.pyright]
include = ["./blender_temp"]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
